feat: 프로젝트 내용 조회 서비스 생성
feat: 프로젝트 상세조회 기능 추가